--- a/Website/styles.css
+++ b/Website/styles.css
@@ -31,10 +31,11 @@ img {
 .header{
 	padding: 40px 20px;
 	margin: 0 auto;
-	width: 80%;
+	width: 100%;
+  height: 5%;
 	color:#00C8FE;
 	font-size:30px;
-	background-color:#eee;	
+	background-color:#eee;
 	letter-spacing: 0.15em;
 	font: normal normal normal 24px/1.4em din-next-w01-light, din-next-w02-light, din-next-w10-light, sans-serif;
 }
@@ -77,6 +78,11 @@ img {
 canvas{
     /*border: 1px solid black;*/
     clear: both;
+    position:fixed;
+}
+
+#__processing1{
+  position:fixed;
 }
 
 
@@ -132,30 +138,34 @@ canvas{
 }
 /**{border:1px dashed blue;}*/
 
+
+.cup{
+  padding-top: 5px;
+}
 .container {
 	padding: 40px 20px;
 	margin: 0 auto;
-	width: 90%;	
+	width: 90%;
 }
 
 ::-webkit-scrollbar {
     width: 12px;
 }
- 
+
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     -webkit-border-radius: 10px;
     border-radius: 10px;
 }
- 
+
 ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    background: rgba(100,100,100,0.3); 
-    
+    background: rgba(100,100,100,0.3);
+
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-	background: rgba(200,200,200,0.4); 
+	background: rgba(200,200,200,0.4);
 }
 
 .button {
@@ -172,6 +182,8 @@ canvas{
 	border-radius: 15px;
 	width:10%;
 	height:50px;
+  margin-right: -5px;
+  margin-top: 5px;
 }
 
 .button:hover {
@@ -200,14 +212,15 @@ canvas{
 	box-sizing: border-box;
 	clear: both;
 	float: right;
-	/*margin-left: 10%;*/
+	margin-right: 30px;
 	padding: 8px 30px;
 	position: relative;
-	width: 87%;
+	width: 85%;
 	max-width: 100%;
 	word-wrap: break-word;
 	height:50px;
-	resize: none;	
+	resize: none;
+  margin-top: 5px;
 }
 
 .bubble {
@@ -233,6 +246,7 @@ canvas{
 	width: auto;
 	max-width: 100%;
 	word-wrap: break-word;
+
 }
 
 .bubble:before, .bubble:after {
@@ -272,4 +286,3 @@ canvas{
 	left: auto;
 	right: -5px;
 }
-
